NXP-10906: missing guava dependency

--- a/nuxeo-platform-jbpm-automation/pom.xml
+++ b/nuxeo-platform-jbpm-automation/pom.xml
@@ -41,6 +41,10 @@
       <groupId>org.jbpm.jbpm3</groupId>
       <artifactId>jbpm-jpdl</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
 
     <!-- tests -->
     <dependency>
