--- a/nuxeo-platform-jbpm-test/pom.xml
+++ b/nuxeo-platform-jbpm-test/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-jbpm</artifactId>
-    <version>5.7.1</version>
+    <version>7.5.1.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-platform-jbpm-test</artifactId>
