--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -18,10 +17,6 @@
     within Nuxeo Application.
   </description>
 
-  <properties>
-    <nuxeo.jbpm.version>5.8-SNAPSHOT</nuxeo.jbpm.version>
-  </properties>
-
   <modules>
     <module>nuxeo-platform-jbpm-api</module>
     <module>nuxeo-platform-jbpm-core</module>
@@ -31,47 +26,5 @@
     <module>nuxeo-platform-jbpm-task-migration</module>
     <module>nuxeo-platform-jbpm-gadgets</module>
   </modules>
-
-  <dependencyManagement>
-    <dependencies>
-      <!-- jBPM -->
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-jbpm-api</artifactId>
-        <version>${nuxeo.jbpm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-jbpm-automation</artifactId>
-        <version>${nuxeo.jbpm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-jbpm-core</artifactId>
-        <version>${nuxeo.jbpm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-jbpm-test</artifactId>
-        <version>${nuxeo.jbpm.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-jbpm-web</artifactId>
-        <version>${nuxeo.jbpm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-jbpm-task-migration</artifactId>
-        <version>${nuxeo.jbpm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-jbpm-gadgets</artifactId>
-        <version>${nuxeo.jbpm.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
 </project>
