--- a/nuxeo-platform-jbpm-core/pom.xml
+++ b/nuxeo-platform-jbpm-core/pom.xml
@@ -19,6 +19,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.transaction</groupId>
       <artifactId>jta</artifactId>
     </dependency>
